header html structure

--- a/src/templates/01 - HTML Templates/Sub Templates/igor-cantelmo-header.html
+++ b/src/templates/01 - HTML Templates/Sub Templates/igor-cantelmo-header.html
@@ -1,4 +1,5 @@
 <header>
+  <!-- barra de topo -->
   <div class="header__top-bar">
     <section class="header__contact">
       <p class="header__contact-item">
@@ -11,12 +12,14 @@
     </section>
   </div>
 
+  <!-- barra do meio -->
   <div class="header__center">
     <img src="/arquivos/igor-cantelmo-logo-eplus.png" alt="logo" />
     <input type="search" name="search" placeholder="Digite Aqui" />
     <button><vtex.cmc:IgorCantelmoSVGLupa /></button>
   </div>
-
+  
+  <!-- menu de navegação -->
   <nav class="header__nav-menu">
     <ul class="header__nav-items">
       <li><a>TEST CATEGORY</a></li>
